# lpr_detection

./: CMakeLists.txt  main.cpp
